--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 }
 
 .jumbotron{
-  padding: 70px 30px 0px 30px;
+
   margin: 0px auto;
   background: #9575CD;
   color: floralwhite;
@@ -40,3 +40,7 @@
  .navbar-dark{
    background: #512DAB;
  }
+
+.ab{
+  padding-top: 35px;
+}
