--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 .row-content{
-  margin: opx, auto;
+  margin: 0px, auto;
   padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge;
   min-height: 400px;
@@ -50,4 +50,23 @@
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     padding: 10px;
+}
+
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
+
+.white{
+  color: white;
 }
