--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0px auto;
   padding: 0px 0px; }
 
+
 .row-content {
   margin: 0px auto;
   padding: 50px 0px;
@@ -52,3 +53,12 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal .modal-header {
+  background: #512DA8;
+  color: floralwhite; }
+  .modal .modal-header .close {
+    color: floralwhite; }
+
+.modal .modal-body {
+  background: #D1C4E9; }
